fix: spacing issue with lazy-youtube

--- a/assets/css/pages/_blog.scss
+++ b/assets/css/pages/_blog.scss
@@ -128,6 +128,7 @@
 
 // Lazy video
 .lazy-video {
+  margin-block: calc(3 * var(--space));
   aspect-ratio: 800/450;
   display: grid;
   place-items: center;
